<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignupActivity"
    android:background="@drawable/dashboard_bg"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:id="@+id/signup"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uname"
        android:hint="@string/hint_uname"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"

        android:textStyle="normal"
        ></com.google.android.material.textfield.TextInputEditText>
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pass"
        android:hint="@string/hint_pass"
        app:layout_constraintTop_toBottomOf="@+id/uname"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        ></com.google.android.material.textfield.TextInputEditText>


    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mob"
        android:hint="@string/mob"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        ></com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/country"
        android:hint="@string/country"
        app:layout_constraintTop_toBottomOf="@+id/mob"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        ></com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loc"
        android:hint="@string/loc"
        app:layout_constraintTop_toBottomOf="@+id/country"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        ></com.google.android.material.textfield.TextInputEditText>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_btn"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20dp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/signup"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/loc"
        android:clickable="true"
        android:layout_marginTop="30dp"
        ></Button>


</androidx.constraintlayout.widget.ConstraintLayout>