<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@drawable/screen_5"
    >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        app:cardCornerRadius="5dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:id="@+id/login"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/uname"
                android:hint="@string/hint_uname"
                app:layout_constraintTop_toBottomOf="@+id/login"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                ></com.google.android.material.textfield.TextInputEditText>
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pass"
                android:hint="@string/hint_pass"
                app:layout_constraintTop_toBottomOf="@+id/uname"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                ></com.google.android.material.textfield.TextInputEditText>


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_btn"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20dp"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text="@string/Login"
                android:textSize="15dp"
                app:layout_constraintTop_toBottomOf="@+id/pass"
                ></androidx.appcompat.widget.AppCompatButton>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/gmail"
                app:layout_constraintTop_toBottomOf="@+id/login_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5sp"
                android:src="@drawable/gmail"
                android:clickable="true"
                />

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/gmail"
                app:layout_constraintLeft_toRightOf="@+id/gmail"
                app:layout_constraintTop_toBottomOf="@+id/login_btn"
                android:layout_marginLeft="12dp"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>